# xml-excel-report-tool

./: .gitignore  README.md  excel_export.py  gui.py  pyproject.toml  requirements.txt  xml_parser.py
config/: config.py
gui/: __init__.py  actions.py  layout.py
