[project]
name = "relatorio-xml"
version = "0.1.0"
description = "Tool for processing XML files and generating Excel reports"
authors = [
    {name = "Willian",email = "willian.machado.av@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "xmltodict",
    "pandas",
    "openpyxl"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
